--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/msanatan/hyper-match#readme",
   "dependencies": {
+    "fonts": "0.0.2",
     "phaser": "^3.24.1"
   },
   "devDependencies": {
+    "@types/css-font-loading-module": "0.0.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "typescript": "^4.0.3"
