--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,15 @@
     "outDir": "./dist/",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "module": "es6",
-    "target": "es5",
+    "module": "ES6",
+    "target": "ES5",
     "jsx": "react",
     "allowJs": true,
-    "strict": false
+    "strict": false,
+    "lib": [
+      "ES6",
+      "DOM"
+    ]
   },
   "include": [
     "./src/*"
